--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,8 @@
         <p>{{ site.description | default: site.github.project_tagline }}</p>
 
         <img src="{{site.logo | relative_url}}" alt="image of a happy cryptographer" style="border-radius:30%;" width = "200" />
-
+        
+         <button type="button">[Click Me!](www.natangelo.it)</button> 
       </header>
       <section>
 
