--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -5,11 +5,11 @@
 
 .button {
   background-color: hsla(0, 100%, 70%, 0.3); /* baby pink */
-  border: none;
+  /*border: none;
   color: white;
   padding: 15px 32px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-size: 16px;
+  font-size: 16px;*/
 }
