--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
 
         <img src="{{site.logo | relative_url}}" alt="image of a happy cryptographer" style="border-radius:30%;" width = "200" />
         
-         <button class="button"> Click Me! </button> 
+         <button class="button"> <a href="www.natangelo.it" > Click Me </a> </button> 
       </header>
       <section>
 
