--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,6 +3,7 @@
 
 @import "{{ site.theme }}";
 
+/* Buttons */
 .button {
   background-color: hsla(0, 100%, 70%, 0.3); /* baby pink */
   border: none;
@@ -12,4 +13,19 @@
   text-decoration: none;
   display: inline-block;
   font-size: 16px;
+}
+
+/* The navigation menu */
+.navbar {
+  overflow: hidden;
+}
+
+/* Navigation links */
+.navbar a {
+  float: left;
+  font-size: 16px;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
 }
