--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -5,27 +5,16 @@
 
 /* Buttons */
 .button {
-  background-color: hsla(0, 100%, 70%, 0.3); /* baby pink */
+  background-color: white; /* hsla(0, 100%, 70%, 0.3); baby pink */
   border: none;
-  color: white;
   padding: 15px 32px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-size: 16px;
+  font-size: 10px;
 }
 
 /* The navigation menu */
 .navbar {
   overflow: hidden;
-}
-
-/* Navigation links */
-.navbar a {
-  float: left;
-  font-size: 16px;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
 }
