--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -7,11 +7,16 @@
 .button {
   background-color: white; /* hsla(0, 100%, 70%, 0.3); baby pink */
   border: none;
-  padding: 15px 32px;
+  border-radius: 12px;
+  padding: 10px 24px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-size: 10px;
+  font-size: 12px;
+}
+
+.button:hover {
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
 
 /* The navigation menu */
