--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -5,8 +5,8 @@
 
 /* Buttons */
 .button {
-  background-color: white; /* hsla(0, 100%, 70%, 0.3); baby pink */
-  border: none;
+  background-color: white; 
+  border-color: hsla(0, 100%, 70%, 0.3); /* baby pink */
   border-radius: 12px;
   padding: 10px 24px;
   text-align: center;
