--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -8,7 +8,7 @@
   background-color: white; 
   border-color: hsla(0, 100%, 70%, 0.3); /* baby pink */
   border-radius: 12px;
-  padding: 10px 24px;
+  padding: 10px 10px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
@@ -16,7 +16,8 @@
 }
 
 .button:hover {
-  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+  background-color: white; 
+  color: hsla(0, 100%, 70%, 0.3); /* baby pink */
 }
 
 /* The navigation menu */
