--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,9 +20,10 @@
         <p>{{ site.description | default: site.github.project_tagline }}</p>
 
         <img src="{{site.logo | relative_url}}" alt="image of a happy cryptographer" style="border-radius:30%;" width = "200" />
+        
         <div class="navbar">
-          <button class="button"> <a href="https://www.natangelo.it" > Click Me </a> </button> 
-          <button class="button"> <a href="www.natangelo.it" > Don't Lick Me </a> </button> 
+          <button class="button"> <a href="./biblio.html" > The Science </a> </button> 
+          <button class="button"> <a href="./other.html" > The Rest </a> </button> 
         </div>
       </header>
       <section>
