--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,6 +22,7 @@
         <img src="{{site.logo | relative_url}}" alt="image of a happy cryptographer" style="border-radius:30%;" width = "200" />
         
         <div class="navbar">
+          <button class="button"> <a href="./index.html" > Home </a> </button> 
           <button class="button"> <a href="./biblio.html" > The Science </a> </button> 
           <button class="button"> <a href="./other.html" > The Rest </a> </button> 
         </div>
