--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -22,7 +22,8 @@
 
 /* The navigation menu */
 .navbar {
-  overflow: hidden;
-  float: center;
+  /*overflow: hidden;
   padding: 0 10em 15em 0;
+  */
+  float: center;
 }
