--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -23,7 +23,7 @@
 /* The navigation menu */
 .navbar {
   /*overflow: hidden;
-  padding: 0 10em 15em 0;
   */
+  padding: 0 10em 0 0;
   float: center;
 }
