--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,10 +21,11 @@
 
         <img src="{{site.logo | relative_url}}" alt="image of a happy cryptographer" style="border-radius:30%;" width = "200" />
         
-        <div class="navbar">
-          <button class="button"> <a href="./biblio.html" > The Science </a> </button> 
-          <button class="button"> <a href="./other.html" > The Rest </a> </button> 
-        </div>
+         <ul>
+          <li><a href="./biblio.html" > The Science </a></li>
+          <li><a href="./other.html" > The Rest </a></li>
+         </ul> 
+        
       </header>
       <section>
 
