--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,6 +22,7 @@
         <img src="{{site.logo | relative_url}}" alt="image of a happy cryptographer" style="border-radius:30%;" width = "200" />
         
          <ul>
+          <li><a href="." > Home </a></li>
           <li><a href="./biblio.html" > The Science </a></li>
           <li><a href="./other.html" > The Rest </a></li>
          </ul> 
