--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,8 @@
         
         <p>{{ site.description | default: site.github.project_tagline }}</p>
 
-        <img src="{{site.logo | relative_url}}" alt="image of a happy cryptographer" style="border-radius:30%;" width = "200" />
+        <img src="{{site.logo | relative_url}}" alt="image of a happy cryptographer" style="border-radius:30%; argin-left: auto;
+  margin-right: auto;" width = "200" />
         
          <ul>
           <li><a href="." > Home </a></li>
