--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
         
         <p>{{ site.description | default: site.github.project_tagline }}</p>
 
-        <img src="{{site.logo | relative_url}}" alt="image of a happy cryptographer" style="border-radius:30%; argin-left: auto;
+        <img src="{{site.logo | relative_url}}" alt="image of a happy cryptographer" style="border-radius:30%; margin-left: auto;
   margin-right: auto;" width = "200" />
         
          <ul>
