--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,8 +19,7 @@
         
         <p>{{ site.description | default: site.github.project_tagline }}</p>
 
-        <img src="{{site.logo | relative_url}}" alt="image of a happy cryptographer" style="border-radius:30%; margin-left: auto;
-  margin-right: auto;" width = "200" />
+        <img src="{{site.logo | relative_url}}" alt="image of a happy cryptographer" width = "200" />
         
          <ul>
           <li><a href="." > Home </a></li>
