--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -4,7 +4,7 @@
 @import "{{ site.theme }}";
 
 /* Buttons */
-a {
+li {
   background-color: white; 
   /* border-color: hsla(0, 100%, 70%, 0.3); /* baby pink */
   border-radius: 12px;
