--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,21 +3,9 @@
 
 @import "{{ site.theme }}";
 
-/* Buttons */
-li {
-  background-color: white; 
-  /* border-color: hsla(0, 100%, 70%, 0.3); /* baby pink */
-  border-radius: 12px;
-  padding: 10px 10px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 12px;
-}
-
 /* Profile img */
 
-img {
+.profileimg {
   border-radius:30%;
   margin-left: auto;
   margin-right: auto;
