--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,18 +15,19 @@
  
     <div class="wrapper">
       <header>
+        <center>
         <h1><a href="{{ "/" | absolute_url }}">{{ site.hometitle | default: site.github.repository_name }}</a></h1>
         
         <p>{{ site.description | default: site.github.project_tagline }}</p>
 
-        <img class = "profileimg" src="{{site.logo | relative_url}}" alt="image of a happy cryptographer" width = "300" />
+        <img class = "profileimg" src="{{site.logo | relative_url}}" alt="image of a happy cryptographer" width = "250" />
         
          <ul>
           <li><a href="." > Home </a></li>
           <li><a href="./biblio.html" > The Science </a></li>
           <li><a href="./other.html" > The Rest </a></li>
          </ul> 
-        
+        </center>
       </header>
       <section>
 
