--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
         
         <p>{{ site.description | default: site.github.project_tagline }}</p>
 
-        <img class = "profileimg" src="{{site.logo | relative_url}}" alt="image of a happy cryptographer" width = "250" />
+        <img class = "profileimg" src="{{site.logo | relative_url}}" alt="image of a happy cryptographer" />
         
          <ul>
           <li><a href="." > Home </a></li>
