--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,11 +22,12 @@
 
         <img class = "profileimg" src="{{site.logo | relative_url}}" alt="image of a happy cryptographer" />
         
-         <ul>
+         <ul bottom-margin = "1em" text-align = "center">
           <li><a href="." > Home </a></li>
           <li><a href="./biblio.html" > The Science </a></li>
           <li><a href="./other.html" > The Rest </a></li>
          </ul> 
+          
         </center>
       </header>
       <section>
