--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,9 +23,9 @@
         <img class = "profileimg" src="{{site.logo | relative_url}}" alt="image of a happy cryptographer" />
         
          <ul>
-          <li><a class = "navbuttons" href="." > Home </a></li>
-          <li><a class = "navbuttons" href="./biblio.html" > The Science </a></li>
-          <li><a class = "navbuttons" href="./other.html" > The Rest </a></li>
+          <li><a href="." > Home! </a></li>
+          <li><a href="./biblio.html" > The Science </a></li>
+          <li><a href="./other.html" > The Rest </a></li>
          </ul> 
           
         </center>
