--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
 
         <img class = "profileimg" src="{{site.logo | relative_url}}" alt="image of a happy cryptographer" />
         
-         <ul>
+         <ul padding = " 2em" >
           <li><a href="." > Home! </a></li>
           <li><a href="./biblio.html" > The Science </a></li>
           <li><a href="./other.html" > The Rest </a></li>
