--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,6 +31,13 @@
         </center>
       </header>
       <section>
+        
+        
+<script>
+  document.GetElementById("paper").style.fontSize = "16px";
+  document.GetElementById("authors").style.fontSize = "8px";
+ </script>
+ 
 
       {{ content }}
 
