--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,11 +22,11 @@
 
         <img class = "profileimg" src="{{site.logo | relative_url}}" alt="image of a happy cryptographer" />
         
-         <ul>
-          <li><a href="." > Home </a></li>
-          <li><a href="./biblio.html" > The Science </a></li>
-          <li><a href="./other.html" > The Rest </a></li>
-         </ul> 
+         
+          <button><a href="." > Home </a></button>
+          <button><a href="./biblio.html" > The Science </a></button>
+          <button><a href="./other.html" > The Rest </a></button>
+         
           
         </center>
       </header>
