--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -10,3 +10,15 @@
   margin-bottom: 2em;
   width: 15em;
 }
+
+.button1 {
+  border: none;
+  color: blue;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+}
