--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,9 +22,9 @@
 
         <img class = "profileimg" src="{{site.logo | relative_url}}" alt="image of a happy cryptographer" />
         
-        <button><a href="." > Home </a></button>
-        <button><a href="./biblio.html" > The Science </a></button>
-        <button><a href="./other.html" > The Rest </a></button>
+        <button1><a href="." > Home </a></button1>
+        <button1><a href="./biblio.html" > The Science </a></button1>
+        <button1><a href="./other.html" > The Rest </a></button1>
          
           
         </center>
