--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -14,6 +14,7 @@
 .button1 {
   border: none;
   color: blue;
+  background-color: #008CBA; /* Blue */
   padding: 15px 32px;
   text-align: center;
   text-decoration: none;
