--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,8 @@
         <p>{{ site.description | default: site.github.project_tagline }}</p>
 
         <img class = "profileimg" src="{{site.logo | relative_url}}" alt="image of a happy cryptographer" />
-        <br>
+          
+        <br>  /* break line to have the buttons centered */
         
         <button1><a href="." > Home </a></button1>
         <button1><a href="./biblio.html" > The Science </a></button1>
