--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
 
         <img class = "profileimg" src="{{site.logo | relative_url}}" alt="image of a happy cryptographer" />
           
-        <br>  /* break line to have the buttons centered */
+        <br>  <!-- break line to have the buttons centered -->
         
         <button1><a href="." > Home </a></button1>
         <button1><a href="./biblio.html" > The Science </a></button1>
